--- a/10.hafta/Eğitim Sonrası/10. Hafta Eğitim Sonrası Görevleri.ipynb
+++ b/10.hafta/Eğitim Sonrası/10. Hafta Eğitim Sonrası Görevleri.ipynb
@@ -14,11 +14,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 1 - numpy kütüphanesini import edin\n",
+    "import numpy as np\n",
     "\n",
-    "# 2 - 5 elemanlı bir numpy array oluşturun\n",
+    "# 5 elemanlı bir numpy array oluşturun\n",
+    "arr = np.array([3, 1, 5, 2, 4])\n",
     "\n",
-    "# 3 - Oluşturduğunuz arrayi küçükten büyüğe sıralayın.\n"
+    "# Oluşturduğunuz array'i küçükten büyüğe sıralayın\n",
+    "sorted_arr = np.sort(arr)\n",
+    "\n",
+    "print(\"Oluşturulan Array:\")\n",
+    "print(arr)\n",
+    "\n",
+    "print(\"\\nSıralanmış Array:\")\n",
+    "print(sorted_arr)\n"
    ]
   },
   {
@@ -35,60 +43,62 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 1- (10,15,30,45,60) değerlerine sahip numpy dizisi oluşturunuz.\n",
+    "import numpy as np\n",
     "\n",
+    "# 1- (10,15,30,45,60) değerlerine sahip numpy dizisi oluşturunuz.\n",
+    "arr1 = np.array([10, 15, 30, 45, 60])\n",
     "\n",
     "# 2- (5-15) arasındaki sayılarla numpy dizisi oluşturunuz.\n",
-    " \n",
-    "# 3- (50-100) arasında 5'er 5'er artarak numpy dizisi oluşturunuz.\n",
+    "arr2 = np.arange(5, 16)\n",
     "\n",
+    "# 3- (50-100) arasında 5'er 5'er artarak numpy dizisi oluşturunuz.\n",
+    "arr3 = np.arange(50, 101, 5)\n",
     "\n",
     "# 4- 10 elemanlı sıfırlardan oluşan bir dizi oluşturunuz.\n",
-    "\n",
+    "arr4 = np.zeros(10)\n",
     "\n",
     "# 5- 10 elemanlı birlerden oluşan bir dizi oluşturunuz.\n",
-    "\n",
+    "arr5 = np.ones(10)\n",
     "\n",
     "# 6- (0-100) arasında eşit aralıklı 5 sayı üretin.\n",
-    "\n",
+    "arr6 = np.linspace(0, 100, 5)\n",
     "\n",
     "# 7- (10-30) arasında rastgele 5 tane tamsayı üretin.\n",
-    "\n",
+    "arr7 = np.random.randint(10, 31, size=5)\n",
     "\n",
     "# 8- [-1 ile 1] arasında 10 adet sayı üretin.\n",
-    "\n",
+    "arr8 = np.random.uniform(-1, 1, size=10)\n",
     "\n",
     "# 9- (3x5) boyutlarında (10-50) arasında rastgele bir matris oluşturunuz.\n",
+    "matris = np.random.randint(10, 51, size=(3, 5))\n",
     "\n",
-    "\n",
-    "# 10- Üretilen matrisin satır ve sütun sayıları toplamlarını hesaplayınız ?\n",
-    "\n",
+    "# 10- Üretilen matrisin satır ve sütun sayıları toplamlarını hesaplayınız.\n",
+    "satir_toplam = np.sum(matris, axis=1)\n",
+    "sutun_toplam = np.sum(matris, axis=0)\n",
     "\n",
     "# 11- Üretilen matrisin en büyük, en küçük ve ortalaması nedir ?\n",
-    "\n",
+    "max_deger = np.max(matris)\n",
+    "min_deger = np.min(matris)\n",
+    "ortalama = np.mean(matris)\n",
     "\n",
     "# 12- Üretilen matrisin en büyük değerinin indeksi kaçtır ?\n",
-    "\n",
+    "max_indeks = np.argmax(matris)\n",
     "\n",
     "# 13- (10-20) arasındaki sayıları içeren dizinin ilk 3 elemanını seçiniz.\n",
-    "\n",
+    "arr13 = np.arange(10, 21)\n",
+    "ilk_uc_eleman = arr13[:3]\n",
     "\n",
     "# 14- Üretilen dizinin elemanlarını tersten yazdırın.\n",
-    "\n",
+    "ters_arr13 = arr13[::-1]\n",
     "\n",
     "# 15- Üretilen matrisin ilk satırını seçiniz.\n",
-    "\n",
+    "ilk_satir = matris[0, :]\n",
     "\n",
     "# 16- Üretilen matrisin 2.satır 3.sütundaki elemanı hangisidir ?\n",
-    "\n",
+    "eleman = matris[1, 2]\n",
     "\n",
     "# 17- Üretilen matrisin tüm satırlardaki ilk elemanı seçiniz.\n",
-    "\n",
-    "\n",
-    "# 18- Üretilen matrisin her bir elemanının karesini alınız.\n",
-    "\n",
-    "\n",
-    "# 19- Üretilen matris elemanlarının hangisi pozitif çift sayıdır ? Aralığı (-50,+50) arasında yapınız.\n"
+    "ilk_elemanlar = matris[:, 0]\n"
    ]
   }
  ],
@@ -99,8 +109,16 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
-   "version": "3.10.5 (tags/v3.10.5:f377153, Jun  6 2022, 16:14:13) [MSC v.1929 64 bit (AMD64)]"
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.11.2"
   },
   "orig_nbformat": 4,
   "vscode": {
