--- a/10.hafta/Eğitim Öncesi/10. Hafta Eğitim Öncesi Görevleri (1).ipynb
+++ b/10.hafta/Eğitim Öncesi/10. Hafta Eğitim Öncesi Görevleri (1).ipynb
@@ -14,15 +14,34 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import numpy as np\n",
+    "\n",
     "# 1 - numpy kütüphanesini import edin\n",
+    "import numpy as np\n",
     "\n",
     "# 2 - 0 ile 10 arasında 5 sayıdan oluşan matris üretin\n",
+    "matris = np.random.randint(0, 11, size=(5,))\n",
     "\n",
     "# 3 - matris'in boyutunu öğrenin\n",
+    "boyut = matris.shape\n",
     "\n",
     "# 4 - matris'i yeniden boyutlandırın\n",
+    "yeniden_boyutlandirilmis_matris = matris.reshape((1, 5))\n",
     "\n",
-    "# 5 - matris'in boyut sayısını öğrenin\n"
+    "# 5 - matris'in boyut sayısını öğrenin\n",
+    "boyut_sayisi = matris.ndim\n",
+    "\n",
+    "print(\"Matris:\")\n",
+    "print(matris)\n",
+    "\n",
+    "print(\"\\nMatris Boyutu:\")\n",
+    "print(boyut)\n",
+    "\n",
+    "print(\"\\nYeniden Boyutlandırılmış Matris:\")\n",
+    "print(yeniden_boyutlandirilmis_matris)\n",
+    "\n",
+    "print(\"\\nMatris Boyut Sayısı:\")\n",
+    "print(boyut_sayisi)"
    ]
   },
   {
@@ -39,30 +58,26 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import numpy as np\n",
+    "\n",
     "# 1 - 0 ile 10 arasında bulunan tek sayılardan oluşan matris üretin\n",
+    "matris = np.arange(1, 11, 2)\n",
     "\n",
     "# 2 - Oluşturduğunuz matrisi parçalayın\n",
+    "parcalanmis_matrisler = np.split(matris, 5)\n",
     "\n",
-    "# 3 - Parçalanmış matrisleri birleştirin\n"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Problem 3"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# 1 - 5 ile 100 arasında ikişer ikişer atlayarak rastgele 10 sayıdan oluşan matris üretin\n",
+    "# 3 - Parçalanmış matrisleri birleştirin\n",
+    "birlesik_matris = np.concatenate(parcalanmis_matrisler)\n",
     "\n",
-    "# 2 - matris'in özelliklerini inceleyin\n"
+    "print(\"Matris:\")\n",
+    "print(matris)\n",
+    "\n",
+    "print(\"\\nParçalanmış Matrisler:\")\n",
+    "for i, parcalanmis_matris in enumerate(parcalanmis_matrisler):\n",
+    "    print(\"Parça {}: {}\".format(i, parcalanmis_matris))\n",
+    "\n",
+    "print(\"\\nBirleştirilmiş Matris:\")\n",
+    "print(birlesik_matris)\n"
    ]
   }
  ],
@@ -73,8 +88,16 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
-   "version": "3.10.5 (tags/v3.10.5:f377153, Jun  6 2022, 16:14:13) [MSC v.1929 64 bit (AMD64)]"
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.11.2"
   },
   "orig_nbformat": 4,
   "vscode": {
